--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,1 +1,5 @@
-<p>movies works!</p>
+<app-movie-cards [movieType]="'popular'"></app-movie-cards>
+<app-movie-cards [movieType]="'now_playing'"></app-movie-cards>
+<app-movie-cards [movieType]="'top_rated'"></app-movie-cards>
+ 
+ 
